5173.	[bug]		Fixed a race in socket code that could occur when
			accept, send, or recv were called from an event
			loop but the socket had been closed by another
			thread. [RT #874]

5172.	[bug]		nsupdate now honors the operating system's preferred
			ephemeral port range. [GL #905]

5171.	[func]		named plugins are now installed into a separate
			directory.  Supplying a filename (a string without path
			separators) in a "plugin" configuration stanza now
			causes named to look for that plugin in that directory.
			[GL #878]

5170.	[test]		Added --with-dlz-filesystem to feature-test. [GL !1587]

5169.	[bug]		The presence of certain types in an otherwise
			empty node could cause a crash while processing a
			type ANY query. [GL #901]

5168.	[bug]		Do not crash on shutdown when RPZ fails to load.  Also,
			keep previous version of the database if RPZ fails to
			load. [GL #813]

5167.	[bug]		nxdomain-redirect could sometimes lookup the wrong
			redirect name. [GL #892]

5166.	[placeholder]

5165.	[contrib]	Removed SDB drivers from contrib; they're obsolete.
			[GL #428]

5164.	[bug]		Correct errno to result translation in dlz filesystem
			modules. [GL #884]

5163.	[cleanup]	Out-of-tree builds failed --enable-dnstap. [GL #836]

5162.	[cleanup]	Improve dnssec-keymgr manual. Thanks to Tony Finch.
			[GL !1518]

5161.	[bug]		Do not require the SEP bit to be set for mirror zone
			trust anchors. [GL #873]

5160.	[contrib]	Added DNAME support to the DLZ LDAP schema. Also
			fixed a compilation bug affecting several DLZ
			modules. [GL #872]

5159.	[bug]		dnssec-coverage was incorrectly ignoring
			names specified on the command line without
			trailing dots. [GL !1478]

5158.	[protocol]	Add support for AMTRELAY and ZONEMD. [GL #867]

5157.	[bug]		Nslookup now errors out if there are extra command
			line arguments. [GL #207]

5156.	[doc]		Extended and refined the section of the ARM describing
			mirror zones. [GL #774]
